ignore m4import in base.env

--- a/compose/base.env
+++ b/compose/base.env
@@ -6,7 +6,7 @@ WEBDAV_PASSWORD=
 WEBDAV_USERNAME=
 
 # modules = m4app.war|m4export.war|m4idat.war|m4import.war|m4mdat.war|m4pdat.war|m4search.war|m4psns.war
-DEPLOY_IGNORE=
+DEPLOY_IGNORE=m4import.war
 
 JAVA_TRUSTSTORE_PASSWORD=myTrustStore
 
